--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.3.3",
     "sequelize-cli": "^6.2.0"
   },
